uploaded class for model run

--- a/Functions2/test_05_loop_ML_model.ipynb
+++ b/Functions2/test_05_loop_ML_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf2f09b7-3819-496f-a6b6-81150dd6a121",
+   "id": "fc570b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7e10c768",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "411e3fe3-8310-46b3-a892-20ec1825d526",
+   "id": "9702c190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7847818-d787-44c0-a9ed-5f7b873604cb",
+   "id": "96410dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5be50cd9-fe3d-4e4b-b19a-6e4a7f259a20",
+   "id": "992d467f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "15266725-737c-4dc5-9d20-22c014c1f1b4",
+   "id": "acd510aa",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "273e1c61-e4bc-4e57-8595-7bd2398d3c55",
+   "id": "e7e0779e",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdd7a8ba-88c3-4746-8554-24a3d2c1d6c0",
+   "id": "5a0dd2cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2667c2cb-ef9c-4276-8ee5-333b37105880",
+   "id": "761fae0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7235097d-8c78-46da-a698-f9c97270e5c5",
+   "id": "848f3759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "94cea1a6-19a7-43d1-995f-e4f31e5e9cf6",
+   "id": "722f47fd",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "afa9bd4c-33f6-4519-81fc-9fde8ec4ff5d",
+   "id": "bcfaca9a",
    "metadata": {},
    "outputs": [
     {
@@ -541,18 +549,32 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7bacd455-aa72-4543-9cb8-c27a5c7503f9",
+   "id": "ceff7791",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Need to figure out how to read finished model values better. \n",
     "## Can then re-run model multiple times and save the one with the best accuracy. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8720c0c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NueralNetwork:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
