--- a/Functions2/test_05_machine_learning.ipynb
+++ b/Functions2/test_05_machine_learning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1da6cb88-3c2a-4c72-bb74-5d46253e7f85",
+   "id": "21f10c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ee6bfff-45e9-493d-9e30-15fe3222092c",
+   "id": "9c5c4e6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b037706-66b5-4d63-a875-d92962ba7e9d",
+   "id": "b6ec3da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a6298e70-0c31-4c8d-9919-4f7a9b32df2a",
+   "id": "3458498d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b36ecc8f-e6f8-485c-9048-5a293755ff0f",
+   "id": "4f850b20",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "57ed0e36-9c3e-40f7-8838-0f9600249e43",
+   "id": "6a5a42f2",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0213044b-8c60-4039-bdef-129d9c8ab81f",
+   "id": "2e3f4619",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3916c402-d739-433e-9db6-9c72dc8079f0",
+   "id": "1658ff9f",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2dec3e1d-4c63-49db-8a2f-6d1e68e5e7e8",
+   "id": "7f60bcc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "953c08a4-505d-4970-bc65-36096119d1db",
+   "id": "1fc7fd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3cc1dbd2-f231-4261-8273-21cc3e09f4f2",
+   "id": "d4240ee5",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d7928062-fe2c-4e46-a39a-50ef67c2254e",
+   "id": "5c05d9fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2bbff8c8-2dd1-4752-b13c-3879d2f6aa82",
+   "id": "0485635d",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fd00a544-91bf-4d0f-b61e-a7f4cb5b882c",
+   "id": "e0fbf2d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6328470e-c504-4c41-ae47-917b97d47f1d",
+   "id": "e2e13a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "281fb0c3-f3eb-4070-9ae2-c689c3e9e603",
+   "id": "d5df1a5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d768eec7-24d4-4f22-898e-b96a52ae94d6",
+   "id": "4f3c9abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "62a58af7-1a81-44da-88cb-18f0478a145a",
+   "id": "620084b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "200142b5-64d2-49d2-ab4e-c4bd0df95b29",
+   "id": "70d30973",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "723ec008-b0a7-4e8f-8255-b38a9a0db548",
+   "id": "05b128f1",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b423bc2-f96f-4873-b538-4a024c3c5540",
+   "id": "467b780d",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f4e87967-1e17-4f07-acad-501f111e195d",
+   "id": "8336d883",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8995de46-9a39-4fb9-9a5f-8d9fcca50da7",
+   "id": "a0a8792b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "aadd081a-8132-4764-96d3-165f2ee196ab",
+   "id": "ca326b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "41eea653-6672-48bc-9c0e-25dd2830fab6",
+   "id": "0081259c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1dba1b20-9049-4460-b88f-848c153fc04e",
+   "id": "17f50bc6",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6abbf2ed-4228-41dc-ab3e-4defb865ba9c",
+   "id": "e5491c61",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5cd5951a-442c-40a3-a292-e72e87108f19",
+   "id": "3e6d7b75",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba2df68-9fe9-4151-817f-77f347ef18d3",
+   "id": "5f1e3a3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1136,7 +1136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1150,7 +1150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
