--- a/Functions2/test_05_more_ML_loops.ipynb
+++ b/Functions2/test_05_more_ML_loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d7930a5-46ee-4bb0-8994-7a9ce4cb661e",
+   "id": "9c449c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44bb640e-c6e7-433b-8991-a2e0ba1fa3a9",
+   "id": "94368b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "99ade8d9-0fb7-4c74-bb35-f3f468564e3d",
+   "id": "117cc216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08053691-b3d4-4df0-bc76-340d010096e5",
+   "id": "4a07e756",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dadf9f40-ab9a-4a73-b3e9-7dacc71ec1a0",
+   "id": "017afc6a",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d50f45a2-74e1-41c8-86cf-54f37d1cde2f",
+   "id": "091cea3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc4cd85d-c606-40c1-9905-0e3b156db7da",
+   "id": "068e571d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bc7203ae-1023-48aa-8a0b-49846864f574",
+   "id": "24248dd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "720a135b-2897-46da-9db9-6e93e00be0c9",
+   "id": "643931cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cecc9056-60f9-4c7d-b6ce-577608e99df8",
+   "id": "f8c1f81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "87b688d1-c44c-414b-ae33-05ca09b66e48",
+   "id": "3b8e02b9",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fbdc68f1-1a58-42d5-b195-1b27872e7ea8",
+   "id": "7eadc47d",
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "6976df20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork:\n",
+    "    \n",
+    "    def __init__(self, stock_list, validation_split_value, epochs_value, num_of_inputs, num_of_outputs):\n",
+    "        \n",
+    "        from tensorflow.keras.models import Sequential\n",
+    "        from tensorflow.keras.layers import Dense\n",
+    "        from tensorflow.keras.models import model_from_json\n",
+    "        from pathlib import Path\n",
+    "        import pandas as pd\n",
+    "        import matplotlib.pyplot as plt\n",
+    "\n",
+    "        from sklearn.model_selection import train_test_split\n",
+    "        from sklearn.preprocessing import StandardScaler\n",
+    "        \n",
+    "        self.validation_split_value = validation_split_value\n",
+    "        self.epochs_value = epochs_value\n",
+    "        self.num_of_inputs = num_of_inputs\n",
+    "        self.num_of_outputs = num_of_outputs\n",
+    "        self.symbol_accuracy_dict = {}\n",
+    "        \n",
+    "        self.sequential = Sequential\n",
+    "        self.Dense = Dense\n",
+    "        self.model_from_json = model_from_json\n",
+    "        self.Path = Path\n",
+    "        self.pd = pd\n",
+    "        self.train_test_split = train_test_split\n",
+    "        self.StandardScalar = StandardScalar\n",
+    "        self.stock_list = stock_list\n",
+    "        \n",
+    "        \n",
+    "    def run_neural_network(self):\n",
+    "        stock_list = self.stock_list\n",
+    "        accurayc_dict = self.symbol_accuracy_dict\n",
+    "        \n",
+    "        for key in stock_list:\n",
+    "            symbol = key\n",
+    "            df = data_dict_import[symbol]['dataFrame'].copy()\n",
+    "            X = df.drop(columns={'close','adjClose'}).values\n",
+    "            y = df['close'].values\n",
+    "            scaler = self.StandardScaler().fit(X)\n",
+    "            X = scaler.transform(X) \n",
+    "\n",
+    "            ## Run Model 5 times and save best model \n",
+    "            for i in range(5):\n",
+    "                ## Initialize Model \n",
+    "                nn = self.sequential()\n",
+    "\n",
+    "                # First hidden layer\n",
+    "                nn.add(self.Dense(units=8, input_dim=num_of_inputs, activation=\"relu\"))\n",
+    "\n",
+    "                # Second hidden layer\n",
+    "                nn.add(self.Dense(units=8, activation=\"relu\"))\n",
+    "\n",
+    "                # Output layer\n",
+    "                nn.add(self.Dense(units=num_of_outputs, activation=\"linear\"))\n",
+    "\n",
+    "                # Compile the model\n",
+    "                nn.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n",
+    "\n",
+    "                # Fit the model\n",
+    "                model = nn.fit(X, y, \n",
+    "                               validation_split=validation_split_value, \n",
+    "                               epochs=epochs_value, \n",
+    "                               verbose=0)\n",
+    "\n",
+    "                model_loss, model_accuracy = nn.evaluate(X, y, verbose=0)\n",
+    "\n",
+    "                if i == 0:\n",
+    "                    model_accuracy1 = model_accuracy\n",
+    "                    symbol_accuracy_dict[symbol] = model_accuracy1\n",
+    "                    # Save model as JSON\n",
+    "                    nn_json = nn.to_json()\n",
+    "\n",
+    "                    file_path = Path('../Model_Data/'+symbol+'_model_2Layers.json')\n",
+    "                    with open(file_path, \"w\") as json_file:\n",
+    "                        json_file.write(nn_json)\n",
+    "\n",
+    "                    # Save weights\n",
+    "                    file_path = Path('../Model_Data/'+symbol+'_model_2Layers_weights.h5')\n",
+    "                    nn.save_weights(file_path)\n",
+    "                else:\n",
+    "                    if model_accuracy > model_accuracy1:\n",
+    "                        model_accuracy1 = model_accuracy\n",
+    "                        symbol_accuracy_dict[symbol] = model_accuracy1\n",
+    "                        # Save model as JSON\n",
+    "                        nn_json = nn.to_json()\n",
+    "\n",
+    "                        file_path = Path('../Model_Data/'+symbol+'_model_2Layers.json')\n",
+    "                        with open(file_path, \"w\") as json_file:\n",
+    "                            json_file.write(nn_json)\n",
+    "\n",
+    "                        # Save weights\n",
+    "                        file_path = Path('../Model_Data/'+symbol+'_model_2Layers_weights.h5')\n",
+    "                        nn.save_weights(file_path)\n",
+    "        path = Path('../Resources/symbol_accuracy_dict.pkl')\n",
+    "        save_obj(symbol_accuracy_dict,path) \n",
+    "        \n",
+    "    def load_model(self, symbol):\n",
+    "        path = self.Path('../FilesExport_Finished/'+symbol+'_finished_df.pkl')\n",
+    "        data_import = load_obj(path)\n",
+    "        df = data_import['dataFrame'].copy()\n",
+    "        \n",
+    "        X = df.drop(columns={'close','adjClose'}).values\n",
+    "        y = df['close'].values\n",
+    "\n",
+    "        scaler = StandardScaler().fit(X)\n",
+    "        X = scaler.transform(X) \n",
+    "        \n",
+    "        with open(file_path, \"r\") as json_file:\n",
+    "            model_json = json_file.read()\n",
+    "        loaded_model = model_from_json(model_json)\n",
+    "        \n",
+    "        file_path = Path('../Model_Data/'+symbol+'_model_2Layers_weights.h5')\n",
+    "        loaded_model.load_weights(file_path)\n",
+    "        loaded_model.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n",
+    "        score = loaded_model.evaluate(X, y, verbose=0)\n",
+    "        print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))\n",
+    "        \n",
+    "        df2 = df.copy()\n",
+    "        df2['predicted'] = loaded_model.predict(X)\n",
+    "        df_pred = df2[['close','predicted']]\n",
+    "        \n",
+    "        \n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
-   "id": "ed6ed711-fdc4-4036-b446-77218eaeb8fd",
+   "id": "96c3f2e9",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d08a513-df91-448a-a91f-6494d92452ec",
+   "id": "4045d47c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -432,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7156d6-d8aa-49c5-ae74-0b75b7ab5524",
+   "id": "feca13b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -440,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -454,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
