--- a/Functions2/05_do_machine_learning_all_data.ipynb
+++ b/Functions2/05_do_machine_learning_all_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bce016ac-22af-4847-9038-de30fc1d87b5",
+   "id": "2bb71fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "734d24d7-10ab-4783-8f50-a330558e8d69",
+   "id": "f99e0113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "548c9350-4bbe-469e-8619-b85d63e72347",
+   "id": "86ac1848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ede2219-373e-40c7-bd64-3d0c1dc8a0a9",
+   "id": "10c36499",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94210e93-f08f-4ee9-95a3-af5837f25883",
+   "id": "34e17407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d6a678-8c07-4c04-b8b9-222da3a47f4a",
+   "id": "2405c85e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec9ee07e-f4ae-4656-8e73-52a3d853a4bd",
+   "id": "476de3d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -286,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
