--- a/Functions2/test_05_do_machine_learning_all_data.ipynb
+++ b/Functions2/test_05_do_machine_learning_all_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bce016ac-22af-4847-9038-de30fc1d87b5",
+   "id": "c32fce49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "734d24d7-10ab-4783-8f50-a330558e8d69",
+   "id": "81231e86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "548c9350-4bbe-469e-8619-b85d63e72347",
+   "id": "9fe81677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ede2219-373e-40c7-bd64-3d0c1dc8a0a9",
+   "id": "ffa626cb",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94210e93-f08f-4ee9-95a3-af5837f25883",
+   "id": "600cdc7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bb27c43a-d1d4-4937-a270-a25dcd940331",
+   "id": "74ed1866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "282cc1e2-f10d-4923-a023-0dc3070f86cd",
+   "id": "9ea82cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2335fd46-12cc-4507-aeea-5231649ef139",
+   "id": "6d2b75ee",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e5e183fd-2ed1-47f7-8add-5ddd5d7c0b82",
+   "id": "e7dac191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c8040d66-57d5-4f7f-938b-fe1970ad7dfd",
+   "id": "c941fbec",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "75d6a678-8c07-4c04-b8b9-222da3a47f4a",
+   "id": "bb49e632",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec9ee07e-f4ae-4656-8e73-52a3d853a4bd",
+   "id": "ffac318d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
