--- a/Functions2/test_05_loop_ML_model.ipynb
+++ b/Functions2/test_05_loop_ML_model.ipynb
@@ -574,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
