--- a/Functions2/05_do_machine_learning_all_data.ipynb
+++ b/Functions2/05_do_machine_learning_all_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f99e0113",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "86ac1848",
    "metadata": {},
    "outputs": [],
@@ -57,21 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "10c36499",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "932"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Import symbol list \n",
     "path = Path('../Resources/list_TI_export_success.pkl')\n",
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "34e17407",
    "metadata": {},
    "outputs": [],
@@ -91,12 +80,11 @@
     "\n",
     "def mean_squared_model(\n",
     "    symbol,\n",
-    "    model_count = 15, ## Number of times model runs before saving the best one. Should be multiple of 3\n",
+    "    model_count = 5, ## Number of times model runs before saving the best one. Should be multiple of 3\n",
     "    validation_split_value=0.3,\n",
     "    epochs_value=400,\n",
     "    units1 = 8,\n",
     "    units2 = 8,\n",
-    "    units3 = 4,\n",
     "    ):\n",
     "    \n",
     "    key = symbol \n",
@@ -118,74 +106,28 @@
     "\n",
     "    for i in range(model_count):\n",
     "        ## Create Neural Network \n",
-    "        if layers == 1:\n",
-    "            # Create a shallow, 1 hidden layer, neural network\n",
-    "            nn = Sequential()\n",
     "\n",
-    "            # Hidden layer\n",
-    "            nn.add(Dense(units=units1, input_dim=num_of_inputs, activation=\"relu\"))\n",
+    "        # Define the model - deep neural network with two layers\n",
+    "        nn = Sequential()\n",
     "\n",
-    "            # Output layer\n",
-    "            nn.add(Dense(units=num_of_outputs, activation=\"linear\"))\n",
+    "        # First hidden layer\n",
+    "        nn.add(Dense(units=units1, input_dim=num_of_inputs, activation=\"relu\"))\n",
     "\n",
-    "            # Compile the model\n",
-    "            nn.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n",
+    "        # Second hidden layer\n",
+    "        nn.add(Dense(units=units2, activation=\"relu\"))\n",
     "\n",
-    "            # Fit the model\n",
-    "            model = nn.fit(X, y, \n",
-    "                              validation_split=validation_split_value, \n",
-    "                              epochs=epochs_value,\n",
-    "                              verbose=0)\n",
-    "            layers = 2 ## Run again with two layers \n",
+    "        # Output layer\n",
+    "        nn.add(Dense(units=num_of_outputs, activation=\"linear\"))\n",
+    "\n",
+    "        # Compile the model\n",
+    "        nn.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n",
+    "\n",
+    "        # Fit the model\n",
+    "        model = nn.fit(X, y, \n",
+    "                          validation_split=validation_split_value, \n",
+    "                          epochs=epochs_value, \n",
+    "                          verbose=0)\n",
     "            \n",
-    "        elif layers == 2:\n",
-    "            # Define the model - deep neural network with two layers\n",
-    "            nn = Sequential()\n",
-    "\n",
-    "            # First hidden layer\n",
-    "            nn.add(Dense(units=units1, input_dim=num_of_inputs, activation=\"relu\"))\n",
-    "\n",
-    "            # Second hidden layer\n",
-    "            nn.add(Dense(units=units2, activation=\"relu\"))\n",
-    "\n",
-    "            # Output layer\n",
-    "            nn.add(Dense(units=num_of_outputs, activation=\"linear\"))\n",
-    "\n",
-    "            # Compile the model\n",
-    "            nn.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n",
-    "\n",
-    "            # Fit the model\n",
-    "            model = nn.fit(X, y, \n",
-    "                              validation_split=validation_split_value, \n",
-    "                              epochs=epochs_value, \n",
-    "                              verbose=0)\n",
-    "            layers = 3 ## Run again with three layers \n",
-    "            \n",
-    "        elif layers == 3:\n",
-    "            # Define the model - deep neural network with two layers\n",
-    "            nn = Sequential()\n",
-    "\n",
-    "            # First hidden layer\n",
-    "            nn.add(Dense(units=units1, input_dim=num_of_inputs, activation=\"relu\"))\n",
-    "\n",
-    "            # Second hidden layer\n",
-    "            nn.add(Dense(units=units2, activation=\"relu\"))\n",
-    "            \n",
-    "            # Third hidden layer\n",
-    "            nn.add(Dense(units=units3, activation=\"relu\"))\n",
-    "\n",
-    "            # Output layer\n",
-    "            nn.add(Dense(units=num_of_outputs, activation=\"linear\"))\n",
-    "\n",
-    "            # Compile the model\n",
-    "            nn.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n",
-    "\n",
-    "            # Fit the model\n",
-    "            model = nn.fit(X, y, \n",
-    "                              validation_split=validation_split_value, \n",
-    "                              epochs=epochs_value, \n",
-    "                              verbose=0)\n",
-    "            layers = 1 ## Go back to 1 layer and re-run \n",
     "        ## End of if/elif\n",
     "\n",
     "        model_loss, model_accuracy = nn.evaluate(X, y, verbose=0)\n",
@@ -199,20 +141,20 @@
     "            # Save model as JSON\n",
     "            nn_json = nn.to_json()\n",
     "\n",
-    "            file_path = Path('../Model_Data_high_acc/'+symbol+'_model_data.json')\n",
+    "            file_path = Path('../Model_Data_high_loss/'+symbol+'_model_data.json')\n",
     "            with open(file_path, \"w\") as json_file:\n",
     "                json_file.write(nn_json)\n",
     "\n",
     "            # Save weights\n",
-    "            file_path = ('../Model_Data_high_acc/'+symbol+'_model_weights.h5')\n",
+    "            file_path = ('../Model_Data_high_loss/'+symbol+'_model_weights.h5')\n",
     "            nn.save_weights(file_path)\n",
     "            \n",
-    "            file_path = Path('../Model_Data_low_acc/'+symbol+'_model_data.json')\n",
+    "            file_path = Path('../Model_Data_low_loss/'+symbol+'_model_data.json')\n",
     "            with open(file_path, \"w\") as json_file:\n",
     "                json_file.write(nn_json)\n",
     "\n",
     "            # Save weights\n",
-    "            file_path = ('../Model_Data_low_acc/'+symbol+'_model_weights.h5')\n",
+    "            file_path = ('../Model_Data_low_loss/'+symbol+'_model_weights.h5')\n",
     "        ## Rewrite saved model if accuracy is higher or lower \n",
     "        else:\n",
     "            if model_accuracy > model_accuracy_high:\n",
@@ -223,12 +165,12 @@
     "                ## Rewrite saved files \n",
     "                nn_json = nn.to_json()\n",
     "\n",
-    "                file_path = Path('../Model_Data_high_acc/'+symbol+'_model_data.json')\n",
+    "                file_path = Path('../Model_Data_high_loss/'+symbol+'_model_data.json')\n",
     "                with open(file_path, \"w\") as json_file:\n",
     "                    json_file.write(nn_json)\n",
     "\n",
     "                # Save weights\n",
-    "                file_path = ('../Model_Data_high_acc/'+symbol+'_model_weights.h5')\n",
+    "                file_path = ('../Model_Data_high_loss/'+symbol+'_model_weights.h5')\n",
     "                nn.save_weights(file_path)\n",
     "            elif model_accuracy < model_accuracy_low:\n",
     "                ## Rewrite values \n",
@@ -238,12 +180,12 @@
     "                # Rewrite saved files \n",
     "                nn_json = nn.to_json()\n",
     "\n",
-    "                file_path = Path('../Model_Data_low_acc/'+symbol+'_model_data.json')\n",
+    "                file_path = Path('../Model_Data_low_loss/'+symbol+'_model_data.json')\n",
     "                with open(file_path, \"w\") as json_file:\n",
     "                    json_file.write(nn_json)\n",
     "\n",
     "                # Save weights\n",
-    "                file_path = ('../Model_Data_low_acc/'+symbol+'_model_weights.h5')\n",
+    "                file_path = ('../Model_Data_low_loss/'+symbol+'_model_weights.h5')\n",
     "                nn.save_weights(file_path)\n",
     "    ## End of for loop \n",
     "    ## Return nothing "
@@ -286,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
