stage 1 of the backtester uploaded, create loop for buy list planned next

--- a/Functions2/test_06_compare.ipynb
+++ b/Functions2/test_06_compare.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "64d77f35-6761-4784-b6a7-9c56f8dc2d3f",
+   "id": "9aa4cc0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2c3ed033-109f-4c7f-87ef-6cf3007f9dbd",
+   "id": "1d0154f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "091f176b-f805-4855-9cd0-2523d83c7ef6",
+   "id": "3785bde2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ba68546-1132-41aa-8f30-79c049217364",
+   "id": "9b5dadfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e2311317-42d1-4d94-a484-0f3ff94010bb",
+   "id": "f1bef087",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c81b618b-3881-497c-8a36-5c426fa6b96b",
+   "id": "21fff3b4",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "94bae990-8436-472e-baa2-bf4b0203e369",
+   "id": "e70527cb",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "43c9d03a-5fed-4f70-866e-9a78d2c06921",
+   "id": "8ef8fa84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1579c481-8e1a-444c-b519-e3d5d34e4a00",
+   "id": "3ebbd458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1cd9f6c5-bc5d-4d77-9d31-dde178534d0a",
+   "id": "f56f5cfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8ee8cb8d-2a5e-46e2-8437-ace9fe2ef3dc",
+   "id": "d5567bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "81b0ea89-e8b0-4466-b654-3b7d5d3a1d28",
+   "id": "25167c86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1fbc3052-8c15-49b7-8e1b-dd33a8ff45ba",
+   "id": "8c84ddd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ae6bfb51-6501-4133-9baf-e5cb3ed07557",
+   "id": "d77cbb1b",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "56f2452f-ada8-4fc2-88e6-eafc4f77f66f",
+   "id": "024f3464",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "43e107f5-5fd8-4e3a-8f7a-4c9c546df66a",
+   "id": "ebbdd318",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dbefb1ca-d90d-4bed-9c48-f35e55ca11d4",
+   "id": "f5ccb8f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ae54f538-5b45-46a7-8bf1-99d32422eb30",
+   "id": "0f4c2688",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c1ee4839-ea34-410d-b5e0-4b252018fc04",
+   "id": "ad23ba1a",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "877710cd-f059-46cf-bfe5-7e6dcc3e931a",
+   "id": "c5e3bc0b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2abe236-fbf7-45b6-bf31-60aef6a584de",
+   "id": "02533926",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c17850-e656-4668-aea4-26f6c25299a6",
+   "id": "5820ec98",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1049,7 +1049,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1063,7 +1063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
