--- a/Functions2/test_06_run_different_model.ipynb
+++ b/Functions2/test_06_run_different_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7198b4a6-6b22-44fd-a459-d1496b60e812",
+   "id": "38c9bc9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a87701d7-9500-4cd4-9239-834b892b0ac2",
+   "id": "dea8ccfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af260a30-9c11-4a5d-9e27-7e83830b3d70",
+   "id": "d7f040a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5854bc2f-5dd0-4387-b198-1c9a92635e79",
+   "id": "15765f0a",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "55c5ce99-3058-488e-93bc-e5d191522401",
+   "id": "e3889f55",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bf505b0c-7ec5-4afd-813c-787217305536",
+   "id": "318c6e13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "767c1ffb-4987-402c-a7ca-5cf3d4496ad7",
+   "id": "f75d335e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "96be1ad6-da5a-4c87-ba4b-b3491cb5764a",
+   "id": "d8cf8afe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f6ffd240-3c77-4d86-b2ad-c4468cc8c7a2",
+   "id": "8a56bdf6",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b054ffed-1394-4854-b9aa-7f9c3eaa74b4",
+   "id": "d984b1b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "46d14b5a-6a60-4b2d-b0ed-77fe9a5a4733",
+   "id": "66dc6572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d8e38dbc-d6fd-4582-af04-2bdb2caacf09",
+   "id": "bc08f6fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4e6f4ce9-38f1-4d89-99af-f8b0fc425573",
+   "id": "c74dc920",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a012ef2d-f32f-48a0-a4a8-c29c013f49f1",
+   "id": "6c6cc692",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f21443b1-4aee-477b-85ce-99b50666b0bc",
+   "id": "aecadeb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6722e43a-f541-498c-befe-56ff9fdc885e",
+   "id": "bfd3ec2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8aaa66b2-9ebf-46d9-b01e-037329655a32",
+   "id": "bda58217",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e27c3b-4319-4083-bb80-4f4d1cf55114",
+   "id": "c3cbccc5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -439,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -453,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
