--- a/Functions2/test_05_more_ML_loops.ipynb
+++ b/Functions2/test_05_more_ML_loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c449c3e",
+   "id": "1e639fc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94368b9b",
+   "id": "a7fcc05c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "117cc216",
+   "id": "dedb3872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4a07e756",
+   "id": "f8a02321",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "017afc6a",
+   "id": "e3848599",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "091cea3c",
+   "id": "8734391e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "068e571d",
+   "id": "638201f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "24248dd8",
+   "id": "5918087b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "643931cd",
+   "id": "5e5c0b5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f8c1f81b",
+   "id": "0da3cd36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3b8e02b9",
+   "id": "0ae3fd9e",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7eadc47d",
+   "id": "e3ec3bc5",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6976df20",
+   "id": "b646bf35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "96c3f2e9",
+   "id": "4377e10b",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4045d47c",
+   "id": "1e7057e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feca13b8",
+   "id": "b8936b67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -573,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
