New Jan2022 functions folder and Finished API calls

--- a/Functions_Jan2022/01_read_SEC_data.ipynb
+++ b/Functions_Jan2022/01_read_SEC_data.ipynb
@@ -135,35 +135,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7022993</th>\n",
+       "      <th>7279274</th>\n",
        "      <td>2021-05-25</td>\n",
        "      <td>98959W203</td>\n",
        "      <td>ZZZOD</td>\n",
        "      <td>324.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7022994</th>\n",
+       "      <th>7279275</th>\n",
        "      <td>2021-05-26</td>\n",
        "      <td>98959W203</td>\n",
        "      <td>ZZZOD</td>\n",
        "      <td>354.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7022995</th>\n",
+       "      <th>7279276</th>\n",
        "      <td>2021-05-27</td>\n",
        "      <td>98959W203</td>\n",
        "      <td>ZZZOD</td>\n",
        "      <td>976.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7022996</th>\n",
+       "      <th>7279277</th>\n",
        "      <td>2021-05-28</td>\n",
        "      <td>98959W203</td>\n",
        "      <td>ZZZOD</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7022997</th>\n",
+       "      <th>7279278</th>\n",
        "      <td>2021-06-17</td>\n",
        "      <td>98959W203</td>\n",
        "      <td>ZZZOF</td>\n",
@@ -171,7 +171,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7022998 rows × 4 columns</p>\n",
+       "<p>7279279 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -182,13 +182,13 @@
        "3       2018-10-18  812350122     0122PIK           828.0\n",
        "4       2019-05-02  812350122     0122PIK           828.0\n",
        "...            ...        ...         ...             ...\n",
-       "7022993 2021-05-25  98959W203       ZZZOD           324.0\n",
-       "7022994 2021-05-26  98959W203       ZZZOD           354.0\n",
-       "7022995 2021-05-27  98959W203       ZZZOD           976.0\n",
-       "7022996 2021-05-28  98959W203       ZZZOD             2.0\n",
-       "7022997 2021-06-17  98959W203       ZZZOF             1.0\n",
+       "7279274 2021-05-25  98959W203       ZZZOD           324.0\n",
+       "7279275 2021-05-26  98959W203       ZZZOD           354.0\n",
+       "7279276 2021-05-27  98959W203       ZZZOD           976.0\n",
+       "7279277 2021-05-28  98959W203       ZZZOD             2.0\n",
+       "7279278 2021-06-17  98959W203       ZZZOF             1.0\n",
        "\n",
-       "[7022998 rows x 4 columns]"
+       "[7279279 rows x 4 columns]"
       ]
      },
      "execution_count": 4,
@@ -199,7 +199,7 @@
    "source": [
     "## Do Loop to read all .txt files in folder \n",
     "## Requires import glob to do \n",
-    "path = r'C:\\Users\\watso\\OneDrive\\Projects\\FintechProject2_TWbranch\\Fintech_Project_2\\SEC_Text' # USE YOUR PATH \n",
+    "path = r'C:\\Users\\watso\\LocalFolder\\ProjectsLocal\\Fintech_Project_2\\SEC_Text' # USE YOUR PATH \n",
     "all_files = glob.glob(path + \"/*.txt\")\n",
     "\n",
     "ftd_df = pd.DataFrame()   ## Declare empty dataframe \n",
@@ -237,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\watso\\\\OneDrive\\\\Projects\\\\FintechProject2_TWbranch\\\\Fintech_Project_2\\\\SEC_Text\\\\cnsfails202110b.txt'"
+       "'C:\\\\Users\\\\watso\\\\LocalFolder\\\\ProjectsLocal\\\\Fintech_Project_2\\\\SEC_Text\\\\cnsfails202112b.txt'"
       ]
      },
      "execution_count": 5,
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a4d4a14e-3fa8-4297-a600-5c26012efbdf",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7022998 entries, 0 to 7022997\n",
+      "RangeIndex: 7279279 entries, 0 to 7279278\n",
       "Data columns (total 4 columns):\n",
       " #   Column          Dtype         \n",
       "---  ------          -----         \n",
@@ -269,7 +269,7 @@
       " 2   SYMBOL          object        \n",
       " 3   QUANTITY_FAILS  float64       \n",
       "dtypes: datetime64[ns](1), float64(1), object(2)\n",
-      "memory usage: 214.3+ MB\n"
+      "memory usage: 222.1+ MB\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5285602b-6077-433c-a7c7-ac1ba0b1fd4a",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "aa7cd861-7034-4404-b352-d6d8117ea128",
    "metadata": {},
    "outputs": [
@@ -336,22 +336,22 @@
        "      <td>Y21990034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>0122PIK</td>\n",
        "      <td>812350122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>5</th>\n",
        "      <td>0297RTS</td>\n",
        "      <td>G72990297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>6</th>\n",
        "      <td>0329REORG</td>\n",
        "      <td>G33990329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>7</th>\n",
        "      <td>0888RTSPYMNT</td>\n",
        "      <td>529900888</td>\n",
        "    </tr>\n",
@@ -361,62 +361,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33911</th>\n",
+       "      <th>7279173</th>\n",
        "      <td>ZZLL</td>\n",
        "      <td>98880P103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33912</th>\n",
+       "      <th>7279174</th>\n",
        "      <td>ZZLL</td>\n",
        "      <td>98880P202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33913</th>\n",
+       "      <th>7279258</th>\n",
        "      <td>ZZLLD</td>\n",
        "      <td>98880P202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33914</th>\n",
+       "      <th>7279266</th>\n",
        "      <td>ZZZOD</td>\n",
        "      <td>98959W203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33915</th>\n",
+       "      <th>7279278</th>\n",
        "      <td>ZZZOF</td>\n",
        "      <td>98959W203</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>33916 rows × 2 columns</p>\n",
+       "<p>34768 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             SYMBOL      CUSIP\n",
-       "0        0034RIGHTS  Y21990034\n",
-       "1           0122PIK  812350122\n",
-       "2           0297RTS  G72990297\n",
-       "3         0329REORG  G33990329\n",
-       "4      0888RTSPYMNT  529900888\n",
-       "...             ...        ...\n",
-       "33911          ZZLL  98880P103\n",
-       "33912          ZZLL  98880P202\n",
-       "33913         ZZLLD  98880P202\n",
-       "33914         ZZZOD  98959W203\n",
-       "33915         ZZZOF  98959W203\n",
+       "               SYMBOL      CUSIP\n",
+       "0          0034RIGHTS  Y21990034\n",
+       "2             0122PIK  812350122\n",
+       "5             0297RTS  G72990297\n",
+       "6           0329REORG  G33990329\n",
+       "7        0888RTSPYMNT  529900888\n",
+       "...               ...        ...\n",
+       "7279173          ZZLL  98880P103\n",
+       "7279174          ZZLL  98880P202\n",
+       "7279258         ZZLLD  98880P202\n",
+       "7279266         ZZZOD  98959W203\n",
+       "7279278         ZZZOF  98959W203\n",
        "\n",
-       "[33916 rows x 2 columns]"
+       "[34768 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cusip_symbol_df = ftd_df[['SYMBOL','CUSIP']]\n",
-    "cusip_symbol_df = cusip_symbol_df.drop_duplicates()\n",
+    "#cusip_symbol_df = cusip_symbol_df.drop_duplicates()\n",
     "cusip_symbol_df = cusip_symbol_df.sort_values('SYMBOL')\n",
     "cusip_symbol_df = cusip_symbol_df.reset_index(drop=True)\n",
+    "cusip_symbol_df = cusip_symbol_df.drop_duplicates()\n",
     "cusip_symbol_df"
    ]
   },
@@ -479,14 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "305a50c5-7a04-4dc8-aa2d-b7c689f489dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Export DFs\n",
-    "ftd_df.to_csv('../Resources/ftd_all_data.csv')\n",
-    "cusip_symbol_df.to_csv('../Resources/symbol_all_list.csv')\n",
+    "# ftd_df.to_csv('../Resources/ftd_all_data.csv')\n",
+    "# cusip_symbol_df.to_csv('../Resources/symbol_all_list.csv')\n",
     "save_obj(ftd_df, '../Resources/ftd_all_data.pkl')\n",
     "save_obj(cusip_symbol_df, '../Resources/symbol_all_list.pkl')"
    ]
